2008-06-28  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c:  Plug memory leak in [Bug 1972879] fix.  Thanks
	Rolf Ade for detecting and Dan Steffen for the fix [Bug 2004654].

2008-06-26  Andreas Kupries  <andreask@activestate.com>

	* unix/Makefile.in: Followup to my change of 2008-06-25, make code
	generated by the Makefile and put into the installd tm.tcl
	conditional on interpreter safeness as well. Thanks to Daniel
	Steffen for reminding me of that code.

2008-06-25  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Update for 8.5.3 release.

2008-06-25  Andreas Kupries  <andreask@activestate.com>

	* library/tm.tcl:	Modified the handling of Tcl Modules and of the
	* library/safe.tcl:	Safe Base to interact nicely with each other,
	* library/init.tcl:	enabling requiring Tcl Modules in safe
	* tests/safe.test:	interpreters. Fixes [Bug 1999119].

2008-06-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rules.vc:    Backported fix for dde/registry versions and
	* win/makefile.vc: the staticpkg build option

2008-06-24  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c: Fixed some internals management in the "path"
	Tcl_ObjType for the empty string value.  Problem led to a crash in
	the command [glob -dir {} a]. [Bug 1999176].

2008-06-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c: Fixed bug in Tcl_GetTranslatedPath() when
	operating on the "Special path" variant of the "path" Tcl_ObjType
	intrep.  A full normalization was getting done, in particular, coercing
	relative paths to absolute, contrary to what the function of
	producing the "translated path" is supposed to do.  [Bug 1972879].

2008-06-19  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Update for 8.5.3 release.

	* generic/tclInterp.c:	Fixed completely boneheaded mistake that
	* tests/interp.test:	[interp bgerror $slave] and [$slave bgerror]
	would always act like [interp bgerror {}].  [Bug 1999035].
