@@ -1879,6 +1879,7 @@ Tcl_FSGetNormalizedPath(
     if (fsPathPtr->normPathPtr == NULL) {
 	ClientData clientData = NULL;
 	Tcl_Obj *useThisCwd = NULL;
+	int pureNormalized = 1;
 
 	/*
 	 * Since normPathPtr is NULL, but this is a valid path object, we know
@@ -1927,6 +1928,7 @@ Tcl_FSGetNormalizedPath(
 		    return NULL;
 		}
 
+		pureNormalized = 0;
 		Tcl_DecrRefCount(absolutePath);
 		absolutePath = Tcl_FSJoinToPath(useThisCwd, 1, &absolutePath);
 		Tcl_IncrRefCount(absolutePath);
@@ -1946,6 +1948,7 @@ Tcl_FSGetNormalizedPath(
 		if (absolutePath == NULL) {
 		    return NULL;
 		}
+		pureNormalized = 0;
 #endif /* __WIN32__ */
 	    }
 	}
@@ -1967,7 +1970,7 @@ Tcl_FSGetNormalizedPath(
 	 * is an absolute path).
 	 */
 
-	if (useThisCwd == NULL) {
+	if (pureNormalized) {
 	    if (!strcmp(TclGetString(fsPathPtr->normPathPtr),
 		    TclGetString(pathPtr))) {
 		/*
@@ -1983,7 +1986,8 @@ Tcl_FSGetNormalizedPath(
 
 		fsPathPtr->normPathPtr = pathPtr;
 	    }
-	} else {
+	} 
+	if (useThisCwd != NULL) {
 	    /*
 	     * We just need to free an object we allocated above for relative
 	     * paths (this was returned by Tcl_FSJoinToPath above), and then
